samples/_failures_safe/1761005882_fe33db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8be5863.c: In function ‘add_log_entry’:
./samples/SAFE/__tmp_d8be5863.c:110:44: error: expected ‘]’ at end of input
  110 |     analyzer->entries[analyzer->entry_count
      |                                            ^
      |                                            ]
./samples/SAFE/__tmp_d8be5863.c:110:5: error: expected declaration or statement at end of input
  110 |     analyzer->entries[analyzer->entry_count
      |     ^~~~~~~~
